--- a/Gamification.html
+++ b/Gamification.html
@@ -11,13 +11,11 @@
   </header>
   <div class="text">
     <nav><a href="index.html">Home
-      <p><a href="https://shinywelloffscientificcomputing.levivan5.repl.co/">Over Ons</a></p>
+      <p><a href="Over Ons.html">Over Ons</a></p>
       <p><a
           href="https://www.researchgate.net/publication/256743509_Does_Gamification_Work_-_A_Literature_Review_of_Empirical_Studies_on_Gamification">Bronnen</a>
       </p>
-      <p><a href="https://forms.gle/27tLh9zQXsgRHjHt8">Vul Dit in!</a></p>
     </nav>
-
     <article>
       <h2>Gamification</h2>
     <img src="https://th.bing.com/th/id/R.0310c6fb8b5de6d7ef6f6f42fb83fe2a?rik=8ntaPAzwHgud%2fQ&pid=ImgRaw&r=0" class="P"/>
