--- a/Overtuigen.html
+++ b/Overtuigen.html
@@ -7,31 +7,38 @@
 
 <body>
   <header>
-    <h1><center>Gamification</center></h1>
+    <h1>
+      <center>Gamification</center>
+    </h1>
   </header>
   <div class="text">
     <nav><a href="index.html">Home
-      <p><a href="https://shinywelloffscientificcomputing.levivan5.repl.co/">Over Ons</a></p>
-      <p><a
-          href="https://www.researchgate.net/publication/256743509_Does_Gamification_Work_-_A_Literature_Review_of_Empirical_Studies_on_Gamification">Bronnen</a>
-      </p>
-      <p><a href="https://forms.gle/27tLh9zQXsgRHjHt8">Vul Dit in!</a></p>
+        <p><a href="Over Ons.html">Over Ons</a></p>
+        <p><a
+            href="https://www.researchgate.net/publication/256743509_Does_Gamification_Work_-_A_Literature_Review_of_Empirical_Studies_on_Gamification">Bronnen</a>
+</p>
+</p>
     </nav>
-
     <article>
       <h2>Overtuigen</h2>
-      <img src="https://www.emerce.nl/content/uploads/2018/05/Gamification.jpg" class="P"/>
+      <img src="https://www.emerce.nl/content/uploads/2018/05/Gamification.jpg" class="P" />
       <li><a href="Gamification.html">Gamification</a></li>
       <li class="active">Overtuigen</li>
       <li><a href="Technieken.html">Technieken</a></li>
       <li><a href="Kahoot.html">Kahoot</a></li>
       <li><a href="Spel Elementen.html">Spel Elementen</a></li>
       <li><a href="Leren.html">Leren</a></li>
-            <p>Gamification maakt deel uit van overtuigende systeemontwerp en maakt vaak gebruik van spel ontwerpelementen om
+      <p>Gamification maakt deel uit van overtuigende systeemontwerp en maakt vaak gebruik van spel ontwerpelementen om
         de attentie van de spelers te verbeteren. Een verzameling van onderzoek naar Gamification toont aan dat een
         meerderheid van de studies over Gamification vindt dat het positieve effecten heeft op spelers er bestaan wel
-        per individu verschillen.</p>
-        <div>
+        per individu verschillen. Bijvoorbeeld het spel Candy Crush dat je waarschijnlijk al zo vaak gezien hebt maar hoe komt het dat het zo verslavend en populair is?
+<p>
+Dat komt doordat ze een beloningscyclus hebben, Snelle beloningen waarvan het positieve effect maar kort duurt, versterken het gedrag. Het behalen van punten, badges of nieuwe levens, zijn allemaal voorbeelden van een snelle beloning. Bij deze beloning komt dopamine vrij, waardoor je een goed gevoel krijgt en langer blijft spelen.
+<p>
+En ook door groepsdruk, Groepsdruk is zo sterk dat het al vanaf onze jeugd ons gedrag beïnvloedt. Doordat Candy Crush een koppeling heeft gemaakt met Facebook, worden de gebruikers blootgesteld aan verschillende sociale elementen: Groepsdruk: iedereen speelt het spel
+De beste willen zijn: zit jij in een hoger level dan je vrienden?</p>
+<img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/2e2c50a8-57aa-48c1-918c-c0f470391a8e/02-the-surprising-relationship-between-gamification-and-modern-persuasion.gif" class="Q" />
+      <div>
     </article>
   </div>
 </body>
