--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   </header>
   <div class="text">
     <nav>Home
-      <p><a href="https://shinywelloffscientificcomputing.levivan5.repl.co/">Over Ons</a></p>
+      <p><a href="Over Ons.html">Over Ons</a></p>
       <p><a
           href="https://en.wikipedia.org/wiki/Gamification">Bronnen</a>
       </p>
-      <p><a href="https://forms.gle/27tLh9zQXsgRHjHt8">Vul Dit in!</a></p>
     </nav>
     <article>
       <h2>Inleiding</h2>
@@ -23,10 +22,11 @@
       <li><a href="Technieken.html">Technieken</a></li>
       <li><a href="Kahoot.html">Kahoot</a></li>
       <li><a href="Spel Elementen.html">Spel Elementen</a></li>
-      <li><a href="Leren.html">Leren</a></li>
+      <li><a href="Leren.html">Leren</a></li><br>
         <div>
-<img src="pacman gamification GIF.gif" height="350" width="750">  </img>
+<img src="pacman gamification GIF.gif" height="280" width="500">  </img>
     </article>
   </div>
 </body>
 </html>
+<link rel="icon" type="x-icon" href="favicon.ico"> 
