Inleiding beter gemaakt

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <h1><center>Gamification</center></h1>
   </header>
   <div class="text">
-    <nav>Home
+    <nav>
+      <li class="active">Home</li>
+      <li><a href="Gamification.html">Gamification</a></li>
+      <li><a href="Overtuigen.html">Overtuigen</a></li>
+      <li><a href="Technieken.html">Technieken</a></li>
+      <li><a href="Kahoot.html">Kahoot</a></li>
+      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
+      <li><a href="Leren.html">Leren</a></li>
       <p><a href="Over Ons.html">Over Ons</a></p>
       <p><a
           href="https://en.wikipedia.org/wiki/Gamification">Bronnen</a>
@@ -16,13 +23,14 @@
     </nav>
     <article>
       <h2>Inleiding</h2>
-       <p>Welkom op onze website <br> Wij zijn Denie en Levi en deze website gaat over gamification hier staat alles uitgelegd over gamification en hoe het werkt.<br>Stuur ons gerust een mail als je iets over ons of over gamification te weten wilt komen.</p>
-      <li><a href="Gamification.html">Gamification</a></li>
-      <li><a href="Overtuigen.html">Overtuigen</a></li>
-      <li><a href="Technieken.html">Technieken</a></li>
-      <li><a href="Kahoot.html">Kahoot</a></li>
-      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
-      <li><a href="Leren.html">Leren</a></li><br>
+      <ol>
+  <li>Wie zijn wij?</li>
+  <li>Waarom hebben wij dit gemaakt?</li>
+  <li>Hoe kan je ons bereiken?</li>
+</ol>
+      <ul>
+        <li>Spek</li>
+      </ul>
         <div>
 <img src="pacman gamification GIF.gif" height="280" width="500">  </img>
     </article>
