--- a/Over Ons.html
+++ b/Over Ons.html
@@ -8,7 +8,14 @@
     <h1><center>Over Ons</center></h1>
   </header>
   <div class="text">
-    <nav><a href="index.html">Home
+   <nav>
+      <li class="active">Home</li>
+      <li><a href="Gamification.html">Gamification</a></li>
+      <li><a href="Overtuigen.html">Overtuigen</a></li>
+      <li><a href="Technieken.html">Technieken</a></li>
+      <li><a href="Kahoot.html">Kahoot</a></li>
+      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
+      <li><a href="Leren.html">Leren</a></li>
       <p><a href="Over Ons.html">Over Ons</a></p>
       <p><a
           href="https://en.wikipedia.org/wiki/Gamification">Bronnen</a>
