--- a/Overtuigen.html
+++ b/Overtuigen.html
@@ -12,12 +12,18 @@
     </h1>
   </header>
   <div class="text">
-    <nav><a href="index.html">Home
-        <p><a href="Over Ons.html">Over Ons</a></p>
-        <p><a
-            href="https://www.researchgate.net/publication/256743509_Does_Gamification_Work_-_A_Literature_Review_of_Empirical_Studies_on_Gamification">Bronnen</a>
-</p>
-</p>
+    <nav>
+      <li class="active">Home</li>
+      <li><a href="Gamification.html">Gamification</a></li>
+      <li><a href="Overtuigen.html">Overtuigen</a></li>
+      <li><a href="Technieken.html">Technieken</a></li>
+      <li><a href="Kahoot.html">Kahoot</a></li>
+      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
+      <li><a href="Leren.html">Leren</a></li>
+      <p><a href="Over Ons.html">Over Ons</a></p>
+      <p><a
+          href="https://en.wikipedia.org/wiki/Gamification">Bronnen</a>
+      </p>
     </nav>
     <article>
       <h2>Overtuigen</h2>
