Navigatie beter gemaakt.

--- a/Over Ons.html
+++ b/Over Ons.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <header>
@@ -9,14 +10,14 @@
   </header>
   <div class="text">
    <nav>
-      <li class="active">Home</li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Gamification.html">Gamification</a></li>
       <li><a href="Overtuigen.html">Overtuigen</a></li>
       <li><a href="Technieken.html">Technieken</a></li>
       <li><a href="Kahoot.html">Kahoot</a></li>
       <li><a href="Spel Elementen.html">Spel Elementen</a></li>
       <li><a href="Leren.html">Leren</a></li>
-      <p><a href="Over Ons.html">Over Ons</a></p>
+      <p class="active">Over Ons</p>
       <p><a
           href="https://en.wikipedia.org/wiki/Gamification">Bronnen</a>
       </p>
@@ -25,12 +26,6 @@
       <h2>Over Ons</h2>
        <p>Hallo, Onze Namen zijn Denie Cheng en Levi van Lochem, <br> Als je ons wilt bereiken onze E-mails zijn 111223@st-maartenscollege.nl en 111276@st-maartenscollege.nl en onze telefoon nummers zijn 06 27509535 en 06 47057057, <br>
        We wonen allebei in Nederland.</p>
-      <li><a href="Gamification.html">Gamification</a></li>
-      <li><a href="Overtuigen.html">Overtuigen</a></li>
-      <li><a href="Technieken.html">Technieken</a></li>
-      <li><a href="Kahoot.html">Kahoot</a></li>
-      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
-      <li><a href="Leren.html">Leren</a></li><br>
       <form action="contactus.php" method="post">
 
     <p>Name:</p>
