--- a/Overtuigen.html
+++ b/Overtuigen.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
   </header>
   <div class="text">
     <nav>
-      <li class="active">Home</li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Gamification.html">Gamification</a></li>
-      <li><a href="Overtuigen.html">Overtuigen</a></li>
+      <li class="active">Overtuigen</li>
       <li><a href="Technieken.html">Technieken</a></li>
       <li><a href="Kahoot.html">Kahoot</a></li>
       <li><a href="Spel Elementen.html">Spel Elementen</a></li>
@@ -28,12 +29,6 @@
     <article>
       <h2>Overtuigen</h2>
       <img src="https://www.emerce.nl/content/uploads/2018/05/Gamification.jpg" class="P" />
-      <li><a href="Gamification.html">Gamification</a></li>
-      <li class="active">Overtuigen</li>
-      <li><a href="Technieken.html">Technieken</a></li>
-      <li><a href="Kahoot.html">Kahoot</a></li>
-      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
-      <li><a href="Leren.html">Leren</a></li>
       <p>Gamification maakt deel uit van overtuigende systeemontwerp en maakt vaak gebruik van spel ontwerpelementen om
         de attentie van de spelers te verbeteren. Een verzameling van onderzoek naar Gamification toont aan dat een
         meerderheid van de studies over Gamification vindt dat het positieve effecten heeft op spelers er bestaan wel
