--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <header>
@@ -24,13 +25,19 @@
     <article>
       <h2>Inleiding</h2>
       <ol>
-  <li>Wie zijn wij?</li>
-  <li>Waarom hebben wij dit gemaakt?</li>
-  <li>Hoe kan je ons bereiken?</li>
+<li>Wie zijn wij?</li>
+<ul>
+<li>Wij zijn Levi van Lochem en Denie Cheng, we zijn 15 jaar oud onze Nationaliteit is  Nederlands en we leven in Nederland en onze hobby's zijn gamen.</li>
+</ul>
+<li>Waarom hebben wij dit gemaakt?</li>
+<ul>
+<li>Voor onze school opdracht voor informatica en om mensen op een leuke manier uit te leggen wat gamification is.</li>
+</ul>
+<li>Hoe kan je ons bereiken?</li>
+<ul>
+<li>Als je in de navigatie kijkt en op "Over Ons" klikt zie je alles over hoe je ons kan bereiken voor als je een vraag over gamification of over ons hebt.</li>
+</ul>
 </ol>
-      <ul>
-        <li>Spek</li>
-      </ul>
         <div>
 <img src="pacman gamification GIF.gif" height="280" width="500">  </img>
     </article>
