--- a/Gamification.html
+++ b/Gamification.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
   <div class="text">
     <nav>
       <li><a href="index.html">Home</a></li>
-      <li><a href="Gamificiation.html">Gamification</a></li>
+      <li class="active">Gamification</li>
       <li><a href="Overtuigen.html">Overtuigen</a></li>
       <li><a href="Technieken.html">Technieken</a></li>
       <li><a href="Kahoot.html">Kahoot</a></li>
@@ -26,12 +27,6 @@
     <article>
       <h2>Gamification</h2>
     <img src="https://th.bing.com/th/id/R.0310c6fb8b5de6d7ef6f6f42fb83fe2a?rik=8ntaPAzwHgud%2fQ&pid=ImgRaw&r=0" class="P"/>
-      <li class="active">Gamification</li>
-      <li><a href="Overtuigen.html">Overtuigen</a></li>
-      <li><a href="Technieken.html">Technieken</a></li>
-      <li><a href="Kahoot.html">Kahoot</a></li>
-      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
-      <li><a href="Leren.html">Leren</a></li>
       <p>Gamification is het concept waar je dingen leert van games die je brengt in het echte leven.</p>
       <p>Gamification is de poging om systemen, organisaties en activiteiten te verbeteren door vergelijkbare
       ervaringen te creëren als die ervaren bij games om mensen te motiveren en te betrekken. Dit wordt over het
