--- a/Technieken.html
+++ b/Technieken.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -11,14 +12,14 @@
   </header>
   <div class="text">
     <nav>
-      <li class="active">Home</li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Gamification.html">Gamification</a></li>
       <li><a href="Overtuigen.html">Overtuigen</a></li>
-      <li><a href="Technieken.html">Technieken</a></li>
+      <li class="active">Technieken</li>
       <li><a href="Kahoot.html">Kahoot</a></li>
       <li><a href="Spel Elementen.html">Spel Elementen</a></li>
       <li><a href="Leren.html">Leren</a></li>
-      <p><a href="Over Ons.html">Over Ons</a></p>
+      <p><a href="Over Ons.html">Over Ons</a>
       <p><a
           href="https://en.wikipedia.org/wiki/Gamification">Bronnen</a>
       </p>
@@ -26,13 +27,6 @@
     <article>
       <h2>Technieken</h2>
       <img src="https://cdn0.iconfinder.com/data/icons/gamification-flat-awards-and-badges/500/cup1-1024.png" class="P"/>
-      
-      <li><a href="Gamification.html">Gamification</a></li>
-      <li><a href="Overtuigen.html">Overtuigen</a></li>
-      <li class="active">Technieken</li>
-      <li><a href="Kahoot.html">Kahoot</a></li>
-      <li><a href="Spel Elementen.html">Spel Elementen</a></li>
-      <li><a href="Leren.html">Leren</a></li>
       <p>Gamification technieken zijn bedoeld om gebruik te maken van de biologische verlangens van mensen naar
         socialiseren, leren, prestatie en status. Vroege Gamification strategieën gebruiken beloningen voor spelers die
         de gewenste taken of competitie volbrengen om spelers te betrekken. Soorten beloningen zijn punten, badges of
