Ordered en Unordered list gemaakt

--- a/Technieken.html
+++ b/Technieken.html
@@ -30,7 +30,7 @@
       <p>Gamification technieken zijn bedoeld om gebruik te maken van de biologische verlangens van mensen naar
         socialiseren, leren, prestatie en status. Vroege Gamification strategieën gebruiken beloningen voor spelers die
         de gewenste taken of competitie volbrengen om spelers te betrekken. Soorten beloningen zijn punten, badges of
-        niveaus. Het vullen van een voortgangsbalk, of het verstrekken van punten. Of het zichtbaar maken van de badges
+        niveaus. Het vullen van een voortgangsbalk, of het verstrekken van punten. Of het zichtbaar maken van de badges.
                 <table> 
   <tr>
     <th>Badges</th>
