--- a/Overtuigen.html
+++ b/Overtuigen.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="x-icon" href="Afbeelding/favicon.ico"> 
 </head>
 
 <body>
