--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="x-icon" href="Afbeelding/favicon.ico"> 
 </head>
 <body>
   <header>
@@ -39,9 +40,8 @@
 </ul>
 </ol>
         <div>
-<img src="pacman gamification GIF.gif" height="280" width="500">  </img>
+<img src="Afbeelding/pacman gamification GIF.gif" height="280" width="500">  </img>
     </article>
   </div>
 </body>
 </html>
-<link rel="icon" type="x-icon" href="favicon.ico"> 
